Capture log errors. Extend scenarios.