@@ -10,7 +10,7 @@ plugins {
 
 java { sourceCompatibility = '21' }
 repositories { mavenCentral() }
-bootRun { jvmArgs(["-Xms2g", "-Xmx2g"]) }
+bootRun { jvmArgs(["-Xms2g", "-Xmx2g", "-XX:+ExitOnOutOfMemoryError", "-Djdk.tracePinnedThreads=full"]) }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
